# ESP32-CHIP8

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig
components/BLE/: CMakeLists.txt  ble.hpp  ble_server.cpp  ble_server.hpp
components/CHIP8/: CMakeLists.txt  Kconfig  chip8.cpp  chip8.hpp
components/CPU/: CMakeLists.txt
components/DISP/: CMakeLists.txt  display.cpp  display.hpp
components/VM/: CMakeLists.txt  cpu.cpp  cpu.hpp  keyboard.cpp  keyboard.hpp  observer.hpp
main/: CMakeLists.txt  main.cpp
